{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 29,
  "lineage": "1a78f016-e292-6a68-0648-3e1451c6d6d1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:622021885326:vpc/vpc-60c62808",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-954752fc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8b5da1e3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-60c62808",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-c525f1ad",
            "owner_id": "622021885326",
            "state": "available",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:loadbalancer/app/terraform-asg-example/11e11884a8062afe",
            "arn_suffix": "app/terraform-asg-example/11e11884a8062afe",
            "dns_name": "terraform-asg-example-1051987004.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:622021885326:loadbalancer/app/terraform-asg-example/11e11884a8062afe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-0115c1561c2363497"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00be4c68"
              },
              {
                "subnet_id": "subnet-5397a128"
              },
              {
                "subnet_id": "subnet-a3e791ee"
              }
            ],
            "subnets": [
              "subnet-00be4c68",
              "subnet-5397a128",
              "subnet-a3e791ee"
            ],
            "vpc_id": "vpc-60c62808",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.asg_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener/app/terraform-asg-example/11e11884a8062afe/dba25529b25f99e7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: ow doido, nem existe essa page",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener/app/terraform-asg-example/11e11884a8062afe/dba25529b25f99e7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:loadbalancer/app/terraform-asg-example/11e11884a8062afe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.lb_web",
            "aws_security_group.asg_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:targetgroup/terraform-example/ffeff5c11dc006a1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener-rule/app/terraform-asg-example/11e11884a8062afe/dba25529b25f99e7/4ee1ba50752059ba",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener-rule/app/terraform-asg-example/11e11884a8062afe/dba25529b25f99e7/4ee1ba50752059ba",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener/app/terraform-asg-example/11e11884a8062afe/dba25529b25f99e7",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.lb_web",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.target_group_asg",
            "aws_security_group.asg_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:targetgroup/terraform-example/ffeff5c11dc006a1",
            "arn_suffix": "targetgroup/terraform-example/ffeff5c11dc006a1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:622021885326:targetgroup/terraform-example/ffeff5c11dc006a1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-example",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-60c62808"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:622021885326:security-group/sg-0115c1561c2363497",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0115c1561c2363497",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "teste",
            "name_prefix": "",
            "owner_id": "622021885326",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-60c62808"
          }
        }
      ]
    }
  ]
}